# refinex-wiki

./: AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
app/: globals.css  layout.tsx
components/: theme-provider-source.test.ts  theme-provider.tsx
components/editor/: document-toc-bridge.tsx  editor-base-kit.tsx  editor-kit.tsx  link-preview-resolver.ts  markdown-editor.tsx  markdown-frontmatter.ts  markdown-import.ts  markdown-toc.ts  plate-editor.tsx  use-chat.ts  use-resolved-asset-url.ts  use-workspace-asset-uploader.ts
components/ui/: code-block-node.tsx  code-drawing-node-static.tsx  code-drawing-node.tsx  code-drawing-rendering.ts  editor.tsx  excalidraw-data.ts  excalidraw-node.tsx  export-toolbar-button.tsx  heading-node.tsx  import-toolbar-button.tsx  media-audio-node.tsx  media-file-list.ts  media-file-node.tsx  media-image-node.tsx  media-placeholder-node.tsx  media-toolbar-button.tsx  media-video-node.tsx
components/workspace/: ai-side-panel.tsx  app-splash-gate.tsx  daily-note-calendar.tsx  daily-notes.ts  directory-page.tsx  document-meta-panel.tsx  document-tab-bar.tsx  document-tabs.ts  document-toc-panel.tsx  (+28 more)
docs/: README.md
lib/: link-preview-metadata.ts
scripts/: build-tauri-web.mjs  test-stub.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_runtime.rs  ai_http.rs  ai_secret.rs  ai_settings.rs  assets.rs  git.rs  lib.rs  link_preview.rs  main.rs  settings.rs  system_fonts.rs  terminal.rs  workspace.rs
(+105 files in other folders)
